[package]
name = "gdiplus"
version = "0.0.2"
edition = "2021"
authors = ["David Rios <david.rios.gomes@gmail.com>"]
license = "MIT"
description = "Rust API for GDI+"
repository = "https://github.com/davidrios/gdiplus-rs"
readme = "README.md"
keywords = ["windows", "win32", "gdiplus", "gdip"]
categories = ["os::windows-apis"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]

[dependencies]
# gdiplus-sys2 = "0.1"
winapi = { git = "https://github.com/Jarcho/winapi-rs", branch = "gdiplus", features = [
    "windef",
    "gdiplusflat",
    "gdiplusinit",
]}

[dev-dependencies]
winapi = { git = "https://github.com/Jarcho/winapi-rs", branch = "gdiplus", features = [
    "impl-default",
    "libloaderapi",
    "winerror",
    "winuser",
    "gdiplusflat",
    "gdiplusinit",
]}